    FIX) qSocketSaveIntoFile() - 'timeoutsec' argument changed to 'timeoutms'
    FIX) qSocketRead() - returns 0 when timeout, returns -1 when an error occured;
    FIX) qSocketGets() - returns 0 when timeout, returns -1 when an error occured;

    ADD) qDatabase.c
    ADD) qLog.c
    ADD) qStrcat()
    FIX) qfDecoder()
    FIX) qSocketGets()

  Release 8.0
    NEW) qDecoderSetUploadBase() - Initialize qDecoder() for progressive
    uploading.
    FIX) qDecoder() - Now qDecoder() supports progressive uploading and direct
    file saving into disk.
    NEW) qSedArgAddDirect() - For huge size(over 1024 - 1) value.

  Release 7.1.1
    FIX) qSedArgAdd() - Adjust miss typed variable length. (1024*64 => 1024)

  Release 7.1
    NEW) qGetTimeStr() - Generate date string formatted as 'YYYYMMDDhhmmss'.
    NEW) qJavaScript() - Print out some JavaScript code.
    NEW) qAwkStr() - Scanning pattern from string.
    FIX) qAwkOpen() - Compatibility increment
    FIX) qAwkNext() - Expand array size to 1024(before 256)
    FIX) qCountRead() - Compatibility increment
    FIX) qCountSave() - Compatibility increment
    FIX) qCountUpdate() - Compatibility increment
    FIX) qDecoder() - Now qdecoder uses more smaller memory
    FIX) qCheckFile() - Utility increment
    New socket functions(unix only). Please refer the reference for more
    details.
    NEW) qSocketOpen()
    NEW) qSocketClose()
    NEW) qSocketWaitReadable()
    NEW) qSocketRead()
    NEW) qSocketGets()
    NEW) qSocketWrite()
    NEW) qSocketPuts()
    NEW) qSocketPrintf()
    NEW) qSocketSendFile()
    NEW) qSocketSaveIntoFile()
    NEW) qSocketSetNonblock()
    NEW) qSocketConv2file()
  Release 7.0.1
    NEW) qDecoder() - Added another argument, "variable_name.contenttype", when
    file is uploaded.
    NEW) qCookieValue() - Return only cookie data.
    NEW) qValueType() - Return the type of query.
    NEW) qfopen(), qfclose() - Open file stream with file lock.
    FIX) qPrintf(), qPuts() - Added new modes.